# wasm-qrcode

./: Cargo.toml
src/: lib.rs
