[package]
name = "wasm-qrcode"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
bardecoder = "0.5.0"
base64 = "0.22.1"
image = "0.24"
console_error_panic_hook = { version = "0.1.7", optional = true }
